2011-04-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m: v0.2.0

	- Big rewrite, tidy up, and remove all the code about
	straightening, that is now under function pts_local_rigid().

	- Remove STRAIGHT input argument, that is now implicit if CC is
	provided.

	* PointsToolbox/pts_local_rigid.m: v0.1.1

	- Fix bug. The rotation and translation was wrong, and it became
	apparent when running the function on the 3D example
	bent-vessel-3d-2.mat. Now the points are correctly translated
	before and after rotation, and the procrustes registration is
	unnecessary within the loop.

2011-04-22  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* update_README.sh:

	- Avod recursing into directories. This avoids that it finds the
	*Toolbox directories in bin/

	* Move itk functions to new ItkToolbox directory

	- FiltersToolbox/ItkImFilter.cpp
	- FiltersToolbox/CMakeLists.txt
	- FiltersToolbox/itk_imfilter.m
	- PointsToolbox/ItkKernelTransform.cpp
	- PointsToolbox/CMakeLists.txt
	- PointsToolbox/itk_kernel_transform.m
	- CMakeLists.txt

	* Add new directory ItkToolbox

	* Add FiltersToolbox/ItkImFilter.cpp,
	FiltersToolbox/CMakeLists.txt, FiltersToolbox/itk_imfilter.m:

	- ITK_IMFILTER: Run ITK filter on a 2D or 3D image.

	- This is also a big development in the project, because even
	though this function currently implements only the skeleton
	filter, it is templated so that it can use many of Matlab's matrix
	classes (double, boolean, uint8, etc), and it's generic enough
	that adding new filters should be easy.

	* CMakeLists.txt:

	- Build new function itk_imfilter().

2011-04-21  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add some test data to matlab/test

	- bent-vessel-2d.mat
	- veins-tree-blob.mat
	- veins-tree-blob.mha
	- veins-tree-blob-skeleton.mat
	- veins-tree-blob-skeleton.mha

	* Add PointsToolbox/pts_local_rigid.m: v0.1.0

	- PTS_LOCAL_RIGID Non-rigid transformation that is locally rigid